--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -8,10 +8,11 @@ $pink: #f92672;
 $orange: #fd971f;
 $spacing: 30px;
 
-.livepage-loading * {
-	-webkit-transition: none;
+*{ 
+	box-sizing: border-box;
+	-webkit-backface-visibility: hidden; //Active GPU rendering
+	-webkit-perspective: 1000; //Active GPU rendering
 }
-*{ box-sizing: border-box; }
 html, body{ background: $background; color: $orange; font-family: sans-serif; font-size: 20px; text-shadow: 1px 1px 10px #000;}
 h1{ color: #f92672; }
 
