--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 /* line 1, ../sass/_animations.scss */
-.animated, ul li .answer {
+.animated {
   -webkit-animation-duration: 1s;
   -moz-animation-duration: 1s;
   -o-animation-duration: 1s;
@@ -18,7 +18,7 @@ body {
 }
 
 /* line 1, ../sass/_animations.scss */
-.animated.hinge, ul li .hinge.answer {
+.animated.hinge {
   -webkit-animation-duration: 2s;
   -moz-animation-duration: 2s;
   -o-animation-duration: 2s;
@@ -2639,7 +2639,7 @@ body {
 }
 
 /* line 1, ../sass/_animations.scss */
-.bounceInDown, ul li:hover .answer {
+.bounceInDown {
   -webkit-animation-name: bounceInDown;
   -moz-animation-name: bounceInDown;
   -o-animation-name: bounceInDown;
@@ -3035,7 +3035,7 @@ body {
 }
 
 /* line 1, ../sass/_animations.scss */
-.bounceOutUp, ul li .answer {
+.bounceOutUp {
   -webkit-animation-name: bounceOutUp;
   -moz-animation-name: bounceOutUp;
   -o-animation-name: bounceOutUp;
@@ -4415,7 +4415,7 @@ body {
 }
 
 /* line 1, ../sass/_animations.scss */
-.animated.lightSpeedIn, ul li .lightSpeedIn.answer {
+.animated.lightSpeedIn {
   -webkit-animation-duration: .5s;
   -moz-animation-duration: .5s;
   -o-animation-duration: .5s;
@@ -4491,7 +4491,7 @@ body {
 }
 
 /* line 1, ../sass/_animations.scss */
-.animated.lightSpeedOut, ul li .lightSpeedOut.answer {
+.animated.lightSpeedOut {
   -webkit-animation-duration: .25s;
   -moz-animation-duration: .25s;
   -o-animation-duration: .25s;
@@ -4739,7 +4739,7 @@ body {
 }
 
 /* line 1, ../sass/_animations.scss */
-.animated.wiggle, ul li .wiggle.answer {
+.animated.wiggle {
   -webkit-animation-duration: .75s;
   -moz-animation-duration: .75s;
   -o-animation-duration: .75s;
@@ -4747,16 +4747,13 @@ body {
 }
 
 /* line 11, ../sass/styles.scss */
-.livepage-loading * {
-  -webkit-transition: none;
-}
-
-/* line 14, ../sass/styles.scss */
 * {
   box-sizing: border-box;
+  -webkit-backface-visibility: hidden;
+  -webkit-perspective: 1000;
 }
 
-/* line 15, ../sass/styles.scss */
+/* line 16, ../sass/styles.scss */
 html, body {
   background: #272822;
   color: #fd971f;
@@ -4765,17 +4762,17 @@ html, body {
   text-shadow: 1px 1px 10px #000;
 }
 
-/* line 16, ../sass/styles.scss */
+/* line 17, ../sass/styles.scss */
 h1 {
   color: #f92672;
 }
 
-/* line 18, ../sass/styles.scss */
+/* line 19, ../sass/styles.scss */
 ul {
   list-style: none;
   margin-left: 50px;
 }
-/* line 21, ../sass/styles.scss */
+/* line 22, ../sass/styles.scss */
 ul li {
   background: #fd971f;
   display: block;
@@ -4784,7 +4781,7 @@ ul li {
   position: relative;
   width: 300px;
 }
-/* line 28, ../sass/styles.scss */
+/* line 29, ../sass/styles.scss */
 ul li div {
   background: #f92672;
   border: 2px solid #272822;
@@ -4793,67 +4790,113 @@ ul li div {
   position: relative;
   width: 30px;
 }
-/* line 36, ../sass/styles.scss */
+/* line 37, ../sass/styles.scss */
 ul li .xplain {
   display: block;
   left: 340px;
   position: absolute;
   top: 0;
   width: 500px;
+  z-index: 5;
 }
-/* line 43, ../sass/styles.scss */
+/* line 45, ../sass/styles.scss */
 ul li .answer {
-  background: #272822;
-  border-radius: 10px;
-  box-shadow: 0 0 5px 3px #fff;
-  display: block;
-  height: 200px;
-  padding: 10px;
-  left: -10px;
-  top: -10px;
-  position: absolute;
-  width: 200px;
-  z-index: 10;
+  font-size: 0;
+  font-weight: 700;
+  opacity: 0;
+  overflow: hidden;
 }
-/* line 59, ../sass/styles.scss */
+/* line 52, ../sass/styles.scss */
 ul li:hover div {
   left: 100%;
   margin-left: -30px;
 }
+/* line 56, ../sass/styles.scss */
+ul li:hover .answer {
+  font-size: 20px;
+  opacity: 1;
+  -webkit-transition: font-size 200ms, opacity 1000ms;
+  -moz-transition: font-size 200ms, opacity 1000ms;
+  -o-transition: font-size 200ms, opacity 1000ms;
+  transition: font-size 200ms, opacity 1000ms;
+}
 
-/* line 73, ../sass/styles.scss */
+/* line 69, ../sass/styles.scss */
 li .standard {
   -webkit-transition: all 1000ms;
   -moz-transition: all 1000ms;
   -o-transition: all 1000ms;
   transition: all 1000ms;
 }
-/* line 75, ../sass/styles.scss */
+/* line 71, ../sass/styles.scss */
 li .different {
   -webkit-transition: all 2000ms;
   -moz-transition: all 2000ms;
   -o-transition: all 2000ms;
   transition: all 2000ms;
 }
+/* line 73, ../sass/styles.scss */
+li .multible {
+  width: 0;
+  opacity: 0;
+}
 
-/* line 82, ../sass/styles.scss */
+/* line 80, ../sass/styles.scss */
 li:hover .hover {
   -webkit-transition: all 1000ms;
   -moz-transition: all 1000ms;
   -o-transition: all 1000ms;
   transition: all 1000ms;
 }
-/* line 83, ../sass/styles.scss */
+/* line 81, ../sass/styles.scss */
 li:hover .different {
   -webkit-transition: all 300ms;
   -moz-transition: all 300ms;
   -o-transition: all 300ms;
   transition: all 300ms;
 }
-/* line 84, ../sass/styles.scss */
+/* line 82, ../sass/styles.scss */
+li:hover .delay {
+  -webkit-transition: all 300ms;
+  -webkit-transition-delay: 1000ms;
+  -moz-transition: all 300ms 1000ms;
+  -o-transition: all 300ms 1000ms;
+  transition: all 300ms 1000ms;
+}
+/* line 83, ../sass/styles.scss */
+li:hover .multible {
+  width: 30px;
+  opacity: 1;
+  -webkit-transition: left 1500ms, opacity 500ms, width 1000ms;
+  -moz-transition: left 1500ms, opacity 500ms, width 1000ms;
+  -o-transition: left 1500ms, opacity 500ms, width 1000ms;
+  transition: left 1500ms, opacity 500ms, width 1000ms;
+}
+/* line 90, ../sass/styles.scss */
 li:hover .bezier {
   -webkit-transition: 1s cubic-bezier(0, -0.6, 0.96, 1.11);
   -moz-transition: 1s cubic-bezier(0, -0.6, 0.96, 1.11);
   -o-transition: 1s cubic-bezier(0, -0.6, 0.96, 1.11);
   transition: 1s cubic-bezier(0, -0.6, 0.96, 1.11);
+}
+
+/* line 94, ../sass/styles.scss */
+.menu {
+  max-height: 0;
+  overflow: hidden;
+  position: relative;
+  -webkit-transition: max-height 1000ms;
+  -moz-transition: max-height 1000ms;
+  -o-transition: max-height 1000ms;
+  transition: max-height 1000ms;
+}
+
+/* line 100, ../sass/styles.scss */
+.max-height:hover .menu {
+  max-height: 300px;
+  height: 100%;
+  -webkit-transition: max-height 300ms;
+  -moz-transition: max-height 300ms;
+  -o-transition: max-height 300ms;
+  transition: max-height 300ms;
 }
